--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "node server",
   "main": "app.js",
   "engines": {
-    "node": "20.5.1"
+    "node": "18.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
