--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,16 @@
 {
     "version": 2,
-    "builds": [{
-      "src": "./app.js",
-      "use": "@now/vercel/node"
-    }],
-    "routes": [{"handle": "filesystem"},
+    "builds": [
       {
-        "src": "/.*",
-        "dest": "app.js"
+        "src": "./index.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      
+      {
+        "src": "/(.*)",
+        "dest": "/"
       }
     ]
   }
